[tool.poetry]
name = "web-homework9"
version = "0.1.0"
description = ""
authors = ["PetroChulkov <114095841+PetroChulkov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_homework9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
mongoengine = "^0.27.0"
redis = "^4.5.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
